2006-02-03  Zoran Vasiljevic <vasiljevic@users.sourceforge.net>

	* sample-config.tcl.in: new file
	* sample-congig.tcl: removed

2006-02-02  Zoran Vasiljevic <vasiljevic@users.sourceforge.net>

	* nsthread/nsthreadtest.c: malloc testing uses random
	block sizes of up to 16K to better simulate real-world.

2006-02-02  Bernd Eidenschink  <eide@users.sourceforge.net>

	* README: synced Tcl and NaviServer ./configure arguments
	in compile example. Added note for use of autogen.sh.

2006-02-01  Zoran Vasiljevic <vasiljevic@users.sourceforge.net>

	* include/Makefile.global.in: CP uses -pR options as
	those are supported on all platforms we currently 
	compile on (Solaris, Linux, Mac OSX).

	* Makefile: added find expression to purge junk files
	before making the distribution tarball.

	* README: Reflect 4.99.1 and 8.4.12 Tcl. 

2006-01-24  Zoran Vasiljevic <vasiljevic@users.sourceforge.net>

	* nsd/urlspace.c (JunctionFind): fixed typo in which caused
	code to fail to compile with a standard C compiler.

	ATTENTION: C-compatibility affected.

	* include/ns.h
	* nsd/sock.c:
	* nsd/tcljob.c:
	* nsd/tclsock.c:
	* nsd/nssock.c: Implemented RFE #1413620. Changed
	all C-API calls accepting an integer timeout in
	seconds/msecs to allow Ns_Time struct ptr instead.

2006-01-23  Vlad Seryakov  <seryakov@users.sf.net>

	* m4/tcl.m4: Fixed bug with extra single quote for
	bash 3.1
	* tests/nscache.test:
	* nsd/tclcache.c:
	* nsd/tclcmds.c: Added ns_cache_exists command for cases when
	just existence needed without retrieving the whole cache entry

2006-01-23  Bernd Eidenschink  <eide@users.sf.net>

	* tcl/sendmail.tcl: Added character encoding for subject and body,
	message-id creation, quoted printable text and AUTH PLAIN
	mechanism (all optional).
	* doc/src/ns_sendmail.man:
	* doc/src/README.doc:
	* doc/man/ns_sendmail.n:
	* doc/html/ns_sendmail.html: Doctools documentation file for new
	ns_sendmail functionality as well as examples created with dtplite
